@@ -8,13 +8,14 @@
 
 #include "mpg123lib_intern.h"
 #include "icy2utf8.h"
-#include "debug.h"
 
 #include "gapless.h"
 /* Want accurate rounding function regardless of decoder setup. */
 #define FORCE_ACCURATE
 #include "sample.h"
 #include "parse.h"
+
+#include "debug.h"
 
 #define SEEKFRAME(mh) ((mh)->ignoreframe < 0 ? 0 : (mh)->ignoreframe)
 
